# routes/index.js
@@ -1,10 +1,22 @@
 const express = require('express');
 const passport = require('passport');
 const router = express.Router();
+const bodyParser = require('body-parser');
 
-router.use('/', require('./swagger'));
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('../swagger.json');
+
 router.get('/',(req, res) => {
-    res.send('Welcome to Medical Records API');
+    if (req.session.user) {
+        res.send('<p> Hello! Welcome to Medical Records API</p>' + 
+            '<br><a href="/api-docs">API Documentation</a>' + 
+            '<br> Logged in as: ' + req.session.user.name + 
+            '<br><a href="/logout">Logout</a>');
+    } else {
+        res.send('<p> Hello! Welcome to Medical Records API</p>' + 
+            '<br><a href="/api-docs">API Documentation</a>' + 
+            '<br><a href="/auth/github` ">Login with GitHub</a>');
+    }
 });
 
 const patientRoutes = require('./patient');
@@ -13,14 +25,22 @@ router.use('/patient', patientRoutes);
 const appointmentRoutes = require('./appointment');
 router.use('/appointment', appointmentRoutes);
 
-router.get('/login', passport.authenticate('github'), (req, res) => {});
 
-router.get('/logout', function(req, res, next) {
-    req.logout(function(err) {
-        if(err) { return next(err);}
-        res.redirect('/');
-    });
+router.get('/auth/github', passport.authenticate('github'));
+router.get('/logout', (req, res) => {
+    req.session.destroy();
+    res.redirect('/');
 });
+
+router.get('/auth/github/callback', passport.authenticate('github', {
+    failureRedirect: '/',
+    session: false
+}), (req, res) => {
+    req.session.user = req.user;
+    res.redirect('/');
+});
+
+router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
 module.exports = router;
